--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     font-size: 15px;
     font-weight: normal;
     color: hsl(0, 0%, 90%);
+    background-color: black;
 }
 
 @font-face {
