--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body {
     font-size: 15px;
     font-weight: normal;
     color: hsl(0, 0%, 90%);
-    color: blue;
 }
 
 @font-face {
@@ -243,9 +242,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url("images/cover.jpg") no-repeat;
-    background-size: cover;
-    filter: brightness(0.5); /* Adjust the value to control the brightness */
+    background-color: black;
 }
 
 .hero-content .entry-header {
@@ -952,7 +949,7 @@ body {
 # about-us
 ------------------------------------------------------------*/
 .about-us {
-    background: url("images/about-us-background.jpg") no-repeat;
+    background: url("images/Cover.jpg") no-repeat;
     width: 100%;
     height: 100%;
 }
@@ -1505,7 +1502,7 @@ body {
 # site-header
 ------------------------------------------------------------*/
 .blog-page .page-header {
-    background: url("images/blog-header-background.jpg") no-repeat;
+    background: url("images/aboakyer09.jpg") no-repeat;
 }
 
 .blog-list-page .single-blog-content {
@@ -1600,14 +1597,14 @@ body {
 # contact-page
 ------------------------------------------------------------*/
 .contact-page {
-    background: url("images/contact-background-image.jpg") no-repeat;
+    background: url("images/aboakyer08.jpg") no-repeat;
 }
 
 /*------------------------------------------------------------
 # site-header
 ------------------------------------------------------------*/
 .contact-page .page-header {
-    background: url("images/contact-header-background.jpg") no-repeat;
+    background: url("images/aboakyer08.jpg") no-repeat;
 }
 
 .contact-page .main-content {
@@ -1737,7 +1734,7 @@ body {
 # elements-page
 ------------------------------------------------------------*/
 .elements-page {
-    background: url("images/elements-total-background.jpg") no-repeat;
+    background: url("images/aboakyer08.jpg") no-repeat;
 }
 
 .elements-page .page-header {
